--- a/static/styles.css
+++ b/static/styles.css
@@ -11,7 +11,7 @@
 }
 
 * {
-    border: 1px solid;
+    /*border: 1px solid;*/
     box-sizing: border-box;
 }
 
@@ -49,10 +49,6 @@ a {
 
 nav ul li {
     list-style: none;
-}
-
-img {
-    width: 100px;
 }
 
 nav {
@@ -114,8 +110,8 @@ li a {
 
 section:not(.hero) {
     background-color: var(--color-background);
-    padding-top: 10vh;
-    min-height: 50vh;
+    padding: 5vh 5vw;
+    min-height: 90vh;
 }
 
 .hero {
@@ -146,4 +142,77 @@ section:not(.hero) {
 
 .hero p {
     color: var(--color-secondary);
+}
+
+.about img {
+    width: 100%;
+    height: 50vh;
+    object-fit: cover;
+    object-position: 50% 70%;
+}
+
+.highlights .highlight-menus{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 60vh;
+    gap: 20px;
+}
+
+.highlight-menu {
+    position: relative;
+    overflow: hidden;
+}
+
+.highlight-menu img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.highlight-menu::after {
+    content: "";
+    position: absolute;
+    bottom:0;
+    left:0;
+    width: 100%;
+    height: 30%;
+    background: linear-gradient(to top, rgba(0 ,0, 0, 0.7), transparent);
+}
+
+.highlight-menu h3 {
+    position: absolute;
+    bottom: 20px;
+    left: 25px;
+    z-index: 1;
+    font-size: 1.25rem;
+}
+
+footer {
+    padding: 3vh 5vw;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    background-color: var(--color-primary);
+}
+
+footer p{
+    color: var(--color-background);
+}
+
+#footer-contacts {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.footer-logo {
+    display: inline-block;
+}
+
+.footer-logo svg {
+    min-width: 50px;
+    min-height: 50px;
+    max-width: 60px;
+    max-height: 60px;
+    padding: 0
 }
