--- a/static/styles.css
+++ b/static/styles.css
@@ -6,6 +6,7 @@
     --color-accent: #C9A66B;
     --color-background: #FAF9F6;
     --color-text: #4A4A4A;
+    --color-sub: #8F8F8F;
     --font-heading: "Playfair Display", serif;
     --font-body: "Lato", "Poppins", sans-serif;
 }
@@ -37,6 +38,7 @@ h1, h2, h3, h4, h5, h6, #logo {
 
 h1 {
     font-size: 3rem;
+    text-align: center;
 }
 
 h2 {
@@ -186,6 +188,87 @@ section:not(.hero) {
     left: 25px;
     z-index: 1;
     font-size: 1.25rem;
+}
+
+#nav-tabs {
+    height: 5vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: var(--color-text);
+    justify-items: center;
+}
+
+#nav-tabs::before, #nav-tabs::after {
+    content: "";
+    width: 100px;
+}
+
+#nav-tabs input{
+    display: none;
+}
+
+#nav-tabs label {
+    text-align: center;
+    cursor: pointer;
+    padding: 5px;
+    width: 100px;
+    border-radius: 10px;
+}
+
+#nav-tabs input[type="radio"]:checked + label {
+    font-weight: bold;
+    color: var(--color-background);
+    background-color: var(--color-accent);
+}
+
+.menu-item-container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+}
+
+.menu-item-card {
+    display: flex;
+    max-width: 100%;
+    height: 50vh;
+    flex-direction: column;
+    overflow: hidden;
+    border: 1px solid var(--color-sub);
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px var(--color-sub);
+}
+
+.menu-item-image {
+    margin: 0;
+    width: 100%;
+    min-height: 50%;
+    max-height: 50%;
+    object-fit: cover;
+}
+
+.menu-item-description {
+    display: flex;
+    flex-direction: column;
+    padding: 3%;
+    height: 100%;
+    flex: 1;
+}
+
+.menu-item-description h3 {
+    margin: 3px 0;
+}
+
+.menu-item-description p {
+    margin: 3px 0;
+    flex-grow: 1;
+    color: var(--color-sub)
+}
+
+.menu-item-description h4 {
+    margin: 5px 0 0 0;
+    align-self: flex-end;
+    font-size: larger;
 }
 
 footer {
