--- a/static/styles.css
+++ b/static/styles.css
@@ -64,6 +64,7 @@ nav {
     background-color: var(--color-primary);
     color: var(--color-secondary);
     border-bottom: 1px solid var(--color-accent);
+    z-index: 10;
 }
 
 #logo {
@@ -95,19 +96,34 @@ nav {
 }
 
 nav ul {
-    width: 30%;
+    width: 35%;
     display: flex;
     justify-content: space-around;
+    padding: 1rem;
 }
 
 nav li {
     display: inline-block;
-    display: flex;
-    align-items: end;
 }
 
 nav li a {
     color: var(--color-secondary);
+    padding: 0.5rem;
+    border-radius: 10px;
+    transition: ease 0.5s;
+}
+
+nav li .active, nav li a:active {
+    border: 1px solid var(--color-accent);
+    background-color: var(--color-background);
+    color: var(--color-accent);
+    font-weight: bold;
+}
+
+nav li a:hover {
+    background-color: var(--color-sub);
+    color: var(--color-background);
+    font-weight: bold;
 }
 
 section:not(.hero) {
@@ -141,10 +157,15 @@ section:not(.hero) {
     border: 1px solid var(--color-accent);
     border-radius: 10px;
     margin-top: 1rem;
+    transition: ease 0.5s;
 }
 
 .hero-button:hover {
     background-color: var(--color-text);
+}
+
+.hero-button:active {
+    transform: scale(105%);
 }
 
 .hero p {
@@ -168,6 +189,13 @@ section:not(.hero) {
 .highlight-menu {
     position: relative;
     overflow: hidden;
+    box-shadow: 3px 3px 4px var(--color-sub);
+    transition: ease 0.5s;
+}
+
+.highlight-menu:hover, .menu-item-card:hover {
+    transform: scale(110%);
+    box-shadow: 3px 3px 8px var(--color-text);
 }
 
 .highlight-menu img {
@@ -193,6 +221,7 @@ section:not(.hero) {
     left: 25px;
     z-index: 1;
     font-size: 1.25rem;
+    color: var(--color-background);
 }
 
 #nav-tabs {
@@ -217,8 +246,15 @@ section:not(.hero) {
     text-align: center;
     cursor: pointer;
     padding: 5px;
-    width: 100px;
+    width: 8vw;
     border-radius: 10px;
+    transition: ease 0.5s;
+}
+
+#nav-tabs label:hover {
+    background-color: var(--color-sub);
+    color: var(--color-secondary);
+    font-weight: bold;
 }
 
 #tab-all:checked ~ #nav-tabs label[for="tab-all"],
@@ -231,6 +267,7 @@ section:not(.hero) {
     font-weight: bold;
     color: var(--color-background);
     background-color: var(--color-accent);
+    transition: ease 0.5s;
 }
 
 .menu-item-container {
@@ -240,6 +277,7 @@ section:not(.hero) {
 }
 
 .menu-item-card {
+    background-color: var(--color-background);
     display: flex;
     max-width: 100%;
     height: 50vh;
@@ -248,6 +286,7 @@ section:not(.hero) {
     border: 1px solid var(--color-sub);
     border-radius: 5px;
     box-shadow: 2px 2px 5px var(--color-sub);
+    transition: ease-in 0.25s;
 }
 
 .menu-item-image {
@@ -284,6 +323,7 @@ section:not(.hero) {
 
 .menus {
     display: none;
+    transition: ease 0.5s;
 }
 
 #tab-all:checked ~ #menu-container .menus,
@@ -294,9 +334,8 @@ section:not(.hero) {
 #tab-tea:checked ~ #menu-container .tea,
 #tab-wine:checked ~ #menu-container .wine{
     display: block;
+    opacity: 1;
 }
-
-
 
 footer {
     padding: 3vh 5vw;
